--- a/Games/model_server/requirements.txt
+++ b/Games/model_server/requirements.txt
@@ -1,11 +1,15 @@
+# IMPORTANT: Python 3.8-3.10 required (MediaPipe compatibility)
+# Create virtual environment with: python3.10 -m venv venv
+# Or run: ./setup_venv.sh
+
 fastapi
-uvicorn
+uvicorn[standard]
 opencv-python
-numpy
-mediapipe
+numpy<2.0.0  # MediaPipe compatibility
+mediapipe  # Requires Python 3.8-3.10 only
 joblib
-beam-eye-tracker
 groq
 python-Levenshtein
 python-dotenv
 python-multipart
+scikit-learn
